# api-docs-normalizer

./: .dockerignore  .gitignore  Dockerfile  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml
api_normalizer/: __init__.py  cache.py  cli.py  normalizer.py  parser.py
api_normalizer/exporters/: __init__.py  openapi_json.py  openapi_yaml.py
examples/: messy_api.md  messy_api.yaml
